2005-08-07  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/ImageWriter.cs
	  CodeGen/templates/ImageReader.cs
	  CodeGen/templates/Section.cs
	  Mono.Cecil.Binary/Image.cs
	  Mono.Cecil.Binary/ImageReader.cs
	  Mono.Cecil.Binary/ImageInitializer.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Binary/Section.cs
	  Mono.Cecil.Metadata/MetadataReader.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Implem/StructureReader.cs
	  Mono.Cecil.Implem/StructureWriter.cs
	  Mono.Cecil.Implem/CodeWriter.cs:
		Some writing layer love.

	* CodeGen/templates/ImageWriter.cs
	  CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Binary/Imports.cs
	  Mono.Cecil.Binary/ImageReader.cs
	  Mono.Cecil.Binary/ImageInitializer.cs
	  Mono.Cecil.Binary/ImageWriter.cs:
		Read an write correctly the Hint/Name table
		at the end of the .text section.

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Binary/ImageInitializer.cs:
		More writing layer stuff.

2005-08-06  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/ImageWriter.cs
	  CodeGen/templates/MetadataTableWriter.cs
	  Mono.Cecil.Metadata/MetadataInitializer.cs
	  Mono.Cecil.Metadata/MetadataTableWriter.cs
	  Mono.Cecil.Metadata/StringsHeap.cs
	  Mono.Cecil.Metadata/BlobHeap.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Metadata/UserStringsHeap.cs
	  Mono.Cecil.Metadata/TableCollection.cs
	  Mono.Cecil.Metadata/TablesHeap.cs
	  Mono.Cecil.Metadata/MetadataHeap.cs
	  Mono.Cecil.Metadata/GuidHeap.cs
	  Mono.Cecil.Metadata/MetadataStream.cs
	  Mono.Cecil.Implem/StructureWriter.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Implem/CodeWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Binary/ImageInitializer.cs:
		Playing lego with bricks from the writing layer.

	* Mono.Cecil.dll.sources:
		Updated.
	* CodeGen/templates/CLIHeader.cs
	  CodeGen/templates/PEOptionalHeader.cs
		Blah.
	* CodeGen/cecil.xml