@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Sun Aug 07 14:28:07 CEST 2005
+ * Sun Aug 07 18:06:33 CEST 2005
  *
  *****************************************************************************/
 
@@ -28,6 +28,7 @@ namespace Mono.Cecil.Binary {
 		private BinaryWriter m_binaryWriter;
 
 		private BinaryWriter m_textWriter;
+		private BinaryWriter m_relocWriter;
 
 		public ImageWriter (MetadataWriter writer, BinaryWriter bw)
 		{
@@ -36,6 +37,7 @@ namespace Mono.Cecil.Binary {
 
 			m_textWriter = new BinaryWriter (new MemoryStream ());
 			m_textWriter.BaseStream.Position = 80;
+			m_relocWriter = new BinaryWriter (new MemoryStream ());
 		}
 
 		public Image GetImage ()
@@ -48,10 +50,68 @@ namespace Mono.Cecil.Binary {
 			return m_textWriter;
 		}
 
+		public uint GetAligned (uint integer, uint alignWith)
+		{
+			return (integer + alignWith - 1) & ~(alignWith - 1);
+		}
+
 		public override void Visit (Image img)
 		{
+			uint imgBase = img.PEOptionalHeader.NTSpecificFields.ImageBase;
+			uint sectAlign = img.PEOptionalHeader.NTSpecificFields.SectionAlignment;
+			uint fileAlign = img.PEOptionalHeader.NTSpecificFields.FileAlignment;
+
+			Section txtSec = img.TextSection;
+			Section relocSec = null;
+			foreach (Section s in img.Sections)
+				if (s.Name == Section.Relocs)
+					relocSec = s;
+
+			txtSec.VirtualSize = (uint) m_textWriter.BaseStream.Length;
+			relocSec.VirtualSize = (uint) m_relocWriter.BaseStream.Length;
+
 			// size computations, fields setting, etc.
-			img.PEFileHeader.NumberOfSections = (ushort) img.Sections.Count;
+			uint nbSects = (uint) img.Sections.Count;
+			img.PEFileHeader.NumberOfSections = (ushort) nbSects;
+
+			// build the reloc section data
+			uint relocSize = 12;
+			m_relocWriter.Write ((uint) 0x200);
+			m_relocWriter.Write (relocSize);
+			m_relocWriter.Write ((ushort) (3 << relocSize) + 2);
+			m_relocWriter.Write ((ushort) 0);
+
+			// start counting before sections headers
+			// section start + section header sixe * number of sections
+			uint headersEnd = 0x178 + 0x28 * nbSects;
+			uint fileOffset = headersEnd;
+			uint sectOffset = sectAlign;
+			uint imageSize = 0;
+
+			foreach (Section sect in img.Sections) {
+				fileOffset = GetAligned (fileOffset, fileAlign);
+				sectOffset = GetAligned (sectOffset, sectAlign);
+
+				sect.PointerToRawData = fileOffset;
+				sect.VirtualAddress = new RVA (sectOffset);
+				sect.SizeOfRawData = GetAligned (sect.VirtualSize, fileAlign);
+
+				fileOffset += sect.SizeOfRawData;
+				sectOffset += sect.SizeOfRawData;
+				imageSize += GetAligned (sect.SizeOfRawData, sectAlign);
+			}
+
+			if (txtSec.VirtualAddress.Value != 0x2000)
+				throw new ImageFormatException ("Wrong RVA for .text section");
+
+			img.PEOptionalHeader.StandardFields.CodeSize = GetAligned (
+				txtSec.SizeOfRawData, fileAlign);
+			img.PEOptionalHeader.StandardFields.BaseOfCode = txtSec.VirtualAddress;
+
+			// entry point rva
+
+			imageSize += headersEnd;
+			img.PEOptionalHeader.NTSpecificFields.ImageSize = GetAligned (imageSize, sectAlign);
 		}
 
 		public override void Visit (DOSHeader header)
