@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Sat Aug 06 18:07:45 CEST 2005
+ * Sun Aug 07 17:22:13 CEST 2005
  *
  *****************************************************************************/
 
@@ -102,6 +102,7 @@ namespace Mono.Cecil.Binary {
 			{
 				ImageBase = 0x400000;
 				SectionAlignment = 0x2000;
+				FileAlignment = 0x200;
 				OSMajor = 4;
 				OSMinor = 0;
 				UserMajor = 0;
